Added route /equipment/{itemid}/ammo
