# api/routes/internal/creature/equipment.py
@@ -4,8 +4,9 @@ from flask                      import Flask, jsonify, request
 from loguru                     import logger
 
 from mysql.methods.fn_creature  import fn_creature_get
-from mysql.methods.fn_user      import fn_user_get
-from mysql.methods.fn_inventory import fn_slots_get_one,fn_item_get_one
+from mysql.methods.fn_inventory import (fn_slots_get_one,
+                                        fn_item_get_one,
+                                        fn_item_ammo_set)
 
 from nosql                      import *
 
@@ -61,3 +62,56 @@ def creature_equipment(creatureid):
                         "msg": msg,
                         "payload": {"equipment": equipment,
                                     "creature": creature}}), 200
+
+# API: GET /internal/creature/{creatureid}/equipment/{itemid}/ammo/{operation}/{count}
+def creature_equipment_modifiy(creatureid,itemid,operation,count):
+    if request.headers.get('Authorization') != f'Bearer {API_INTERNAL_TOKEN}':
+        msg = f'Token not authorized'
+        logger.warn(msg)
+        return jsonify({"success": False, "msg": msg, "payload": None}), 403
+
+    if operation not in ['add','consume']:
+        return jsonify({"success": False,
+                        "msg":     f"Operation should be in ['add','consume'] (operation:{operation})",
+                        "payload": None}), 200
+
+    # Pre-flight checks
+    creature    = fn_creature_get(None,creatureid)[3]
+    if creature is None:
+        return jsonify({"success": False,
+                        "msg":     f'Creature unknown (creatureid:{creatureid})',
+                        "payload": None}), 200
+
+    try:
+        item = fn_item_get_one(itemid)
+        if item and item.ammo > 0:
+            if operation == 'consume':
+                item_modified = fn_item_ammo_set(item.id,item.ammo - count)
+            else:
+                item_modified = fn_item_ammo_set(item.id,item.ammo + count)
+        else:
+            msg = f'Item Query KO (creatureid:{creature.id},itemid:{itemid})'
+            logger.error(msg)
+            return jsonify({"success": False,
+                            "msg":     msg,
+                            "payload": None}), 200
+    except Exception as e:
+        msg = f'Item Query KO (creatureid:{creature.id},itemid:{itemid}) [{e}]'
+        logger.error(msg)
+        return jsonify({"success": False,
+                        "msg":     msg,
+                        "payload": None}), 200
+    else:
+        if item_modified:
+            msg = f'Item Query OK (creatureid:{creature.id},itemid:{itemid})'
+            logger.debug(msg)
+            return jsonify({"success": True,
+                            "msg":     msg,
+                            "payload": {"item": item_modified,
+                                        "creature": creature}}), 200
+        else:
+            msg = f'Item Query KO (creatureid:{creature.id},itemid:{itemid})'
+            logger.debug(msg)
+            return jsonify({"success": False,
+                            "msg":     msg,
+                            "payload": None}), 200
